# ipelfs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
history/src/: log.rs
history/src/config/: meta.rs  mod.rs  volume.rs
history/src/utils/: ua.rs
history/src/volume/: collection.rs
history/src/web/: mod.rs  routes.rs
history/webui/: App.vue
history/webui/assets/: main.css  (+2 more)
src/: cli.rs  log.rs  main.rs
src/config/: app.rs  meta.rs  mod.rs  volume.rs
src/handlers/: mod.rs  websocket.rs
src/routes/: api.rs  mod.rs
src/services/: middleware.rs  mod.rs
src/utils/: cli.rs  id.rs  logger.rs  mod.rs
src/volume/: collection.rs  info.rs  metadata.rs  mod.rs
src/web/: api.rs  response.rs  routes.rs
webui/: App.vue  main.ts  package.json
webui/assets/: README.md  app.css  index.css  main.css  nojavascript.css  notification.css  sidebarnavlist.css
webui/components/: ActionSwitch.vue  ConnectionLostModal.vue  LeftSidebar.vue  NotificationContainer.vue  NotificationItem.vue  README.md  RelativeMain.vue  SidebarNavList.vue  SwitchContainer.vue  ThemeToggle.vue  VolumeItem.vue
webui/composables/: useApiUrl.ts  useBackendStatus.ts  useBrowserCompatibility.ts  useI18n.ts  useLocalStorage.ts  useNotifications.ts  useTheme.ts  useVolumes.ts  useWebSocket.ts
webui/locales/: en.json  zh.json
webui/router/: index.ts
webui/views/: ActivityView.vue  CollectionsView.vue  HomeView.vue  InsightsView.vue  VolumesView.vue
(+54 files in other folders)
