[package]
name = "ipelfs"
version = "2.1.3"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header"] }
lazy_static = "1.4.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = "0.3"
get_if_addrs = "0.5"
rand = "0.8"
once_cell = "1.18"
colored = "2.0"
termcolor = "1.1"
